--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "compatibility"
-version = "0.1.0"
+name = "f1pystats"
+version = "0.1.1"
 description = ""
-authors = ["youpong<youpong@cpan.org>"]
+authors = ["youpong <youpong@cpan.org>"]
 license = "MIT"
 readme = "README.md"
 
